feat: 숙소 수정을 위한 페이지, 페이지이동

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -87,6 +87,10 @@
                 </div>
             </div>
         </div>
+        <div class="text-lg-end">
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2"
+               th:href="@{'/accommodation/' + ${accommodation.getId()}+'/updatePage'}">정보 수정</a>
+        </div>
     </div>
 </div>
 <!-- About End -->
