--- a/src/main/resources/templates/accommodation-update.html
+++ b/src/main/resources/templates/accommodation-update.html
@@ -111,14 +111,15 @@
           <div class="row">
             <div class="col">
               <ul class="list-group list-group-horizontal">
-<!--                &lt;!&ndash; 숙박 시설 목록을 반복하여 각 항목을 체크박스로 표시 &ndash;&gt;-->
-<!--                <th:block th:each="facility : ${accommodationFacilityList}">-->
-<!--                  <li class="list-group-item">-->
-<!--                    &lt;!&ndash; 각 숙박 시설을 체크박스로 표시 &ndash;&gt;-->
-<!--                    <input id="accommodation-check-input" class="form-check-input me-1" type="checkbox" th:id="'facility_' + ${facility.id}" th:value="${facility.name}" aria-label="...">-->
-<!--                    <label th:for="'facility_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>-->
-<!--                  </li>-->
-<!--                </th:block>-->
+                <!-- 숙박 시설 목록을 반복하여 각 항목을 체크박스로 표시 -->
+                <th:block th:each="facility : ${accommodationFacilityList}">
+                  <li class="list-group-item">
+                    <!-- 각 숙박 시설을 체크박스로 표시 -->
+                    <input id="facility_${facility.id}" class="form-check-input me-1" type="checkbox" th:id="'facility_' + ${facility.id}" th:value="${facility.name}" aria-label="..."
+                           th:checked="${accommodation.facilityList.contains(facility.name)}">
+                    <label th:for="'facility_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
+                  </li>
+                </th:block>
               </ul>
             </div>
           </div>
