--- a/src/main/resources/templates/layout/navigation-bar.html
+++ b/src/main/resources/templates/layout/navigation-bar.html
@@ -34,8 +34,8 @@
                 <div class="nav-item dropdown">
                     <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">숙소 관리</a>
                     <div class="dropdown-menu m-0">
-                        <a href="/myAccommodations" class="dropdown-item">내 숙소 관리</a>
-                        <a href="" class="dropdown-item">예약 관리</a>
+                        <a href="/management/myAccommodations" class="dropdown-item">내 숙소 관리</a>
+                        <a href="/management/reservations" class="dropdown-item">예약 관리</a>
                     </div>
                 </div>
             </div>
