feat: 업데이트 페이지 연결

--- a/src/main/resources/templates/my-reservation-list.html
+++ b/src/main/resources/templates/my-reservation-list.html
@@ -144,7 +144,7 @@
                                         </table>
                                     </div>
                                     <div class="text-md-end">
-                                        <button type="button" class="btn btn-primary" th:if="${reservation.getStatus()=='대기' or reservation.getStatus()=='완료'}">예약 수정</button>
+                                        <button type="button" class="btn btn-primary" th:onclick="|location.href='@{/reservation/renew/{reservationId}(reservationId=${reservation.getId()})}'|">예약 수정</button>
                                         <button type="button" class="btn btn-danger" th:if="${reservation.getStatus()=='대기' or reservation.getStatus()=='완료'}" th:onclick="'cancelReservation(' + ${reservation.getId()} + ')'">예약 취소</button>
                                     </div>
                                 </div>
