--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -87,7 +87,7 @@
                                     <th:block th:each="facility : ${accommodationFacilityList}">
                                         <li class="list-group-item">
                                             <!-- 각 숙박 시설을 체크박스로 표시 -->
-                                            <input aria-label="..." class="form-check-input me-1" id="accommodation-check-input" th:id="'facility_' + ${facility.id}" th:value="${facility.name}" type="checkbox">
+                                            <input aria-label="..." class="accommodation-check-input form-check-input me-1" th:id="'facility_' + ${facility.id}" th:value="${facility.name}" type="checkbox">
                                             <label th:for="'facility_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
                                         </li>
                                     </th:block>
@@ -246,12 +246,13 @@
         const regionIndex = regionSelect.selectedIndex; // 선택된 옵션의 인덱스 가져오기
         // 체크된 숙박 시설 목록 추적
         const facilityList = [];
-        const checkboxes = document.querySelectorAll('#accommodation-check-input[type=checkbox]:checked');
+        const checkboxes = document.querySelectorAll('.accommodation-check-input[type=checkbox]:checked');
         checkboxes.forEach(function(checkbox) {
             if (checkbox.value !== '') {
                 facilityList.push(checkbox.value);
             }
         });
+        console.log(facilityList);
         // 숙소 정보 수집
         var accommodationAddRequestDto = {
             name: formData.get('accommodationName'),
