refactor : 간단한 입력 input 타입 변경

--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -63,13 +63,13 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-floating date" data-target-input="nearest" id="date3">
-                            <input class="form-control bg-white border-0" data-target="#date3" data-toggle="datetimepicker" id="datetime1" name="checkIn" placeholder="Date & Time" type="text" />
+                            <input class="form-control bg-white border-0" data-target="#date3" data-toggle="datetimepicker" id="datetime1" name="checkIn" placeholder="Date & Time" type="time" />
                             <label for="datetime1">체크 인</label>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="form-floating date" data-target-input="nearest" id="date4">
-                            <input class="form-control bg-white border-0" data-target="#date3" data-toggle="datetimepicker" id="datetime2" name="checkOut" placeholder="Date & Time" type="text" />
+                            <input class="form-control bg-white border-0" data-target="#date3" data-toggle="datetimepicker" id="datetime2" name="checkOut" placeholder="Date & Time" type="time" />
                             <label for="datetime2">체크 아웃</label>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-floating">
-                                <input class="form-control bg-white border-0" id="cost1" placeholder="Your Name" type="text">
+                                <input class="form-control bg-white border-0" id="cost1" min="0" placeholder="Your Name" type="number">
                                 <label for="cost1">가격</label>
                             </div>
                         </div>
