--- a/src/main/resources/templates/room-update.html
+++ b/src/main/resources/templates/room-update.html
@@ -22,7 +22,60 @@
 </div>
 <!-- Header End -->
 
-
+<div class="container-fluid booking py-5">
+    <div class="container py-5">
+        <h1 class="text-white mb-3">객실 정보</h1>
+        <form id="registerForm" method="post" th:action="@{/accommodation/registerPage/register}">
+            <div class="rooms row g-3">
+                <div class="room row g-3">
+                    <h2 class="text-white mb-3">객실 정보</h2>
+                    <div class="col-md-2">
+                        <div class="form-floating">
+                            <input th:value="${room.getName()}" class="form-control bg-white border-0" id="roomName1" placeholder="Your Name" type="text">
+                            <label for="roomName1">객실 명</label>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-floating">
+                            <input th:value="${room.getCost()}" class="form-control bg-white border-0" id="cost1" min="0" placeholder="Your Name" type="number">
+                            <label for="cost1">가격</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea th:text="${room.getContent()}" class="form-control bg-white border-0" id="content1" placeholder="Special Request" style="height: 100px"></textarea>
+                            <label for="content1">객실 소개글</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea th:text="${room.getUseGuide()}" class="form-control bg-white border-0" id="useGuide1" placeholder="Special Request" style="height: 100px"></textarea>
+                            <label for="useGuide1">이용 안내</label>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <ul class="list-group list-group-horizontal">
+                                    <!-- 객실 시설 목록을 반복하여 각 항목을 체크박스로 표시 -->
+                                    <th:block th:each="facility : ${roomFacilityList}">
+                                        <li class="list-group-item">
+                                            <!-- 첫 번째 객실 시설을 체크박스로 표시 -->
+                                            <input aria-label="..." class="form-check-input me-1" th:id="'roomFacility1_' + ${facility.id}" th:value="${facility.name}"
+                                                   th:checked="${room.facilityList.contains(facility.name)}" type="checkbox">
+                                            <label th:for="'roomFacility1_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
+                                        </li>
+                                    </th:block>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3"></div> <!-- 여백을 추가할 빈 줄 -->
+            </div>
+        </form>
+    </div>
+</div>
 
 
 <footer th:replace="~{/layout/footer::footerFragment}"></footer>
@@ -32,83 +85,7 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
-<script>
-    document.getElementById('registerForm').addEventListener('submit', function (e) {
-        e.preventDefault(); // 폼의 기본 제출 동작 방지
 
-        const formData = new FormData(this);
-
-        ////////////////////////////////////////////////////////////////////숙소시작
-        //지역 선택
-        const regionSelect = document.getElementById('selectRegion'); // select 요소 가져오기
-        const regionIndex = regionSelect.selectedIndex; // 선택된 옵션의 인덱스 가져오기
-        const region = regionSelect.options[regionIndex].text;
-
-        // 입력된 값을 가져옴
-        const facilityAdd = document.getElementById('facilityAdd').value;
-
-        // 쉼표를 기준으로 문자열을 분할하여 배열로 변환
-        const facilityArray = facilityAdd.split(',');
-
-        const name = formData.get('accommodationName');
-        const checkIn = formData.get('checkIn');
-        const checkOut = formData.get('checkOut');
-        const address = formData.get('address');
-        const content = formData.get('accommodationContent');
-
-        // 체크된 숙박 시설 목록 추적
-        const facilityList = [];
-        const checkboxes = document.querySelectorAll('.accommodation-check-input[type=checkbox]:checked');
-        checkboxes.forEach(function(checkbox) {
-            if (checkbox.value !== '') {
-                facilityList.push(checkbox.value);
-            }
-        });
-
-        // 쉼표를 기준으로 분할한 배열을 facilityList에 추가
-        facilityList.push(...facilityArray.filter(facility => facility.trim() !== ''));
-
-        console.log(region);
-        console.log(name);
-        console.log(checkIn);
-        console.log(checkOut);
-        console.log(address);
-        console.log(content);
-        console.log(facilityList);
-
-        ////////////////////////////////////////////////////////////////////숙소끝
-
-
-        fetch(this.action, {
-            method: 'PUT',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-                name: name,
-                region: region,
-                address: address,
-                checkIn: checkIn,
-                checkOut: checkOut,
-                content: content,
-                facilityList: facilityList
-            })
-        })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
-                alert('숙소 수정 완료되었습니다.');
-                //TODO: 어디로 보내지
-                window.location.href = '/';
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('숙소 수정 중 오류가 발생하였습니다. 입력한 정보를 확인해 주세요');
-            });
-    });
-</script>
 </body>
 
 </html>
