fix: 타임리프 오류 수정

--- a/src/main/resources/templates/room-update.html
+++ b/src/main/resources/templates/room-update.html
@@ -72,6 +72,9 @@
                     </div>
                 </div>
                 <div class="row mb-3"></div> <!-- 여백을 추가할 빈 줄 -->
+                <div class="col-3">
+                    <button class="btn btn-primary text-white w-100 py-3" type="submit">수정 완료</button>
+                </div>
             </div>
         </form>
     </div>
@@ -85,6 +88,7 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
+
 
 </body>
 
