--- a/src/main/resources/templates/room-update.html
+++ b/src/main/resources/templates/room-update.html
@@ -31,25 +31,25 @@
                     <h2 class="text-white mb-3">객실 정보</h2>
                     <div class="col-md-2">
                         <div class="form-floating">
-                            <input th:value="${room.getName()}" class="form-control bg-white border-0" id="roomName1" placeholder="Your Name" type="text">
+                            <input name="roomName1" th:value="${room.getName()}" class="form-control bg-white border-0" id="roomName1" placeholder="Your Name" type="text">
                             <label for="roomName1">객실 명</label>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="form-floating">
-                            <input th:value="${room.getCost()}" class="form-control bg-white border-0" id="cost1" min="0" placeholder="Your Name" type="number">
+                            <input name="cost1" th:value="${room.getCost()}" class="form-control bg-white border-0" id="cost1" min="0" placeholder="Your Name" type="number">
                             <label for="cost1">가격</label>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-floating">
-                            <textarea th:text="${room.getContent()}" class="form-control bg-white border-0" id="content1" placeholder="Special Request" style="height: 100px"></textarea>
+                            <textarea name="content1" th:text="${room.getContent()}" class="form-control bg-white border-0" id="content1" placeholder="Special Request" style="height: 100px"></textarea>
                             <label for="content1">객실 소개글</label>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-floating">
-                            <textarea th:text="${room.getUseGuide()}" class="form-control bg-white border-0" id="useGuide1" placeholder="Special Request" style="height: 100px"></textarea>
+                            <textarea name="useGuide1" th:text="${room.getUseGuide()}" class="form-control bg-white border-0" id="useGuide1" placeholder="Special Request" style="height: 100px"></textarea>
                             <label for="useGuide1">이용 안내</label>
                         </div>
                     </div>
@@ -61,9 +61,9 @@
                                     <th:block th:each="facility : ${roomFacilityList}">
                                         <li class="list-group-item">
                                             <!-- 첫 번째 객실 시설을 체크박스로 표시 -->
-                                            <input aria-label="..." class="form-check-input me-1" th:id="'roomFacility1_' + ${facility.id}" th:value="${facility.name}"
+                                            <input aria-label="..." class="form-check-input me-1" th:id="'roomFacility_' + ${facility.id}" th:value="${facility.name}"
                                                    th:checked="${room.facilityList.contains(facility.name)}" type="checkbox">
-                                            <label th:for="'roomFacility1_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
+                                            <label th:for="'roomFacility_' + ${facility.id}" th:text="${facility.name}">Facility Name</label>
                                         </li>
                                     </th:block>
                                 </ul>
@@ -88,7 +88,72 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
+<script>
+    document.getElementById('registerForm').addEventListener('submit', function (e) {
+        e.preventDefault(); // 폼의 기본 제출 동작 방지
 
+        const formData = new FormData(this);
+
+        // // 입력된 값을 가져옴
+        // const facilityAdd = document.getElementById('facilityAdd').value;
+        // // 쉼표를 기준으로 문자열을 분할하여 배열로 변환
+        // const facilityArray = facilityAdd.split(',');
+
+        const name = formData.get('roomName1');
+        const cost = formData.get('cost1');
+        const content = formData.get('content1');
+        const useGuide = formData.get('useGuide1');
+
+        // 체크된 숙박 시설 목록 추적
+        const facilityList = [];
+        const checkboxes = document.querySelectorAll('.form-check-input[type=checkbox]:checked');
+        checkboxes.forEach(function(checkbox) {
+            if (checkbox.value !== '') {
+                facilityList.push(checkbox.value);
+            }
+        });
+
+        // 쉼표를 기준으로 분할한 배열을 facilityList에 추가
+        // facilityList.push(...facilityArray.filter(facility => facility.trim() !== ''));
+
+
+        console.log(name);
+        console.log(cost);
+        console.log(content);
+        console.log(useGuide);
+        console.log(facilityList);
+
+
+        // fetch(this.action, {
+        //     method: 'PUT',
+        //     headers: {
+        //         'Content-Type': 'application/json',
+        //     },
+        //     body: JSON.stringify({
+        //         name: name,
+        //         region: region,
+        //         address: address,
+        //         checkIn: checkIn,
+        //         checkOut: checkOut,
+        //         content: content,
+        //         facilityList: facilityList
+        //     })
+        // })
+        //     .then(response => {
+        //         if (!response.ok) {
+        //             throw new Error('Network response was not ok');
+        //         }
+        //         // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
+        //         alert('숙소 수정 완료되었습니다.');
+        //         //TODO: 어디로 보내지
+        //         window.location.href = '/';
+        //     })
+        //     .catch(error => {
+        //         console.error('Error:', error);
+        //         alert('숙소 수정 중 오류가 발생하였습니다. 입력한 정보를 확인해 주세요');
+        //     });
+    });
+</script>
 
 </body>
 
